--- a/.github/workflows/program-auction-house.yml
+++ b/.github/workflows/program-auction-house.yml
@@ -25,7 +25,8 @@ jobs:
           echo "${VERSIONS[@]}" && \
           VERSION_JSON=$(echo "${VERSIONS[@]}" | jq -s) && \
           echo $VERSION_JSON && \
-          echo '::set-output name=value::$VERSION_JSON'
+          echo '::set-output name=value::$VERSION_JSON' && \
+          echo "Result: ${{ steps.matrix.outputs.value }}"
         shell: bash
 
   changes:
