--- a/.github/workflows/program-auction-house.yml
+++ b/.github/workflows/program-auction-house.yml
@@ -23,9 +23,9 @@ jobs:
           TESTNET=$(curl https://api.testnet.solana.com -X POST -H "Content-Type: application/json" -d '{"jsonrpc":"2.0","id":1, "method":"getVersion"}' | jq '.result["solana-core"]') && \
           VERSIONS=($MAINNET $TESTNET) && \
           echo "${VERSIONS[@]}" && \
-          VERSION_JSON=$(echo "${VERSIONS[@]}" | jq -s) && \
+          VERSION_JSON=$(echo "${VERSIONS[@]}" | jq -s -c) && \
           echo $VERSION_JSON && \
-          echo '::set-output name=value::$MAINNET'
+          echo "::set-output name=value::$VERSION_JSON"
         shell: bash
       - id: debug
         run: |
