--- a/.github/workflows/program-auction-house.yml
+++ b/.github/workflows/program-auction-house.yml
@@ -32,7 +32,7 @@ jobs:
   setup-tests:
     runs-on: ubuntu-latest
     outputs:
-      tests: ${{ steps.,matrix.outputs.value }}
+      tests: ${{ steps.matrix.outputs.value }}
     steps:
       - id: matrix
         working-directory: ./
