--- a/.github/workflows/program-auction-house.yml
+++ b/.github/workflows/program-auction-house.yml
@@ -38,10 +38,10 @@ jobs:
         working-directory: ./
         run: |
           sudo apt-get install -y jq && \
-          FILES=()
-          for FILE in auction-house/program/tests/*.rs; do FILES+=($(basename $FILE .rs)); done
+          FILES=() && \
+          for FILE in auction-house/program/tests/*.rs; do FILES+=(\"$(basename $FILE .rs)\"); done && \
           echo "${FILES[@]}" && \
-          FILE_JSON=$(echo "${VERSIONS[@]}" | jq -s -c) && \
+          FILE_JSON=$(echo "${FILES[@]}" | jq -s -c) && \
           echo $FILE_JSON && \
           echo "::set-output name=value::$FILE_JSON"
         shell: bash
