--- a/.github/workflows/program-auction-house.yml
+++ b/.github/workflows/program-auction-house.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           sudo apt-get install -y jq
           FILES=()
-          for FILE in auction-house/program/tests/\*.rs
+          for FILE in auction-house/program/tests/**.rs
           do
             echo $FILE
             FILES+=(\"$(basename $FILE .rs)\")
@@ -48,6 +48,7 @@ jobs:
           FILE_JSON=$(echo "${FILES[@]}" | jq -s -c)
           echo $FILE_JSON
           echo "::set-output name=value::$FILE_JSON"
+        shell: bash
 
   changes:
     needs: [setup-versions, setup-tests]
