Trying manual dispatch again.

--- a/.github/workflows/program-auction-house.yml
+++ b/.github/workflows/program-auction-house.yml
@@ -5,7 +5,9 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      branches: [master]
 
 env:
   CARGO_TERM_COLOR: always
