--- a/token-metadata/program/Cargo.toml
+++ b/token-metadata/program/Cargo.toml
@@ -26,6 +26,7 @@ borsh = "0.9.2"
 shank = { version = "~0.0.4" }
 serde = { version = "1.0.136", optional = true }
 serde_with = { version = "1.12.0", optional = true }
+itertools = "0.10.3"
 
 [dev-dependencies]
 solana-sdk = "1.9.13"
