--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ exclude = [
   "fixed-price-sale/cli",
   "token-metadata",
   "auction-house/program",
-  "candy-machine/program"
+  "candy-machine/program",
+  "bubblegum/program",
 ]
