--- a/Anchor.toml
+++ b/Anchor.toml
@@ -7,6 +7,7 @@ wallet = "~/.config/solana/id.json"
 
 [programs.localnet]
 mpl_auction_house="hausS13jsjafwWwGqZTUQRmWyvyxn9EQpqMwV1PBBmk"
+bubblegum="BGUMAp9Gq7iTEuizy4pqaxsTyUCBK68MDfK752saRPUY"
 
 [[test.genesis]]
 address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
@@ -28,10 +29,33 @@ program = "target/deploy/mpl_fixed_price_sale.so"
 address = "gdrpGjVffourzkdDRrQmySw4aTHr8a3xmQzzxSwFD1a"
 program = "target/deploy/mpl_gumdrop.so"
 
+[[test.genesis]]
+address = "WRAPYChf58WFCnyjXKJHtrPgzKXgHp6MD9aVDqJBbGh"
+program = "./target/deploy/candy_wrapper.so"
+
 [workspace]
 members = [
   "token-entangler/program",
   "token-metadata/program",
   "auction-house/program",
   "fixed-price-sale/program",
+  "bubblegum/program"
 ]
+
+[test.validator]
+url = "https://api.mainnet-beta.solana.com"
+
+[[test.validator.clone]]
+address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
+
+[[test.validator.clone]]
+address = "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
+
+[[test.validator.clone]]
+address = "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL"
+
+[test]
+startup_wait = 10000
+
+[scripts]
+test = "yarn run ts-mocha -t 1000000 tests/**/*-test.ts"
