--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ members=[
   "token-vault/program",
   "token-vault/test",
   "nft-packs/program",
-  "fixed-price-sale/program"
+  "fixed-price-sale/program",
 ]
 exclude = [
   "fixed-price-sale/cli",
+  "candy-machine/program",
   "token-metadata",
   "auction-house/program",
-  "candy-machine/program"
 ]
