--- a/.github/workflows/integration-auction-house.yml
+++ b/.github/workflows/integration-auction-house.yml
@@ -76,3 +76,21 @@ jobs:
         id: run_integration_test
         working-directory: ./auction-house/js
         run: DEBUG=mpl* yarn test 
+
+      - name: stop-local-test-validator
+        working-directory: ./auction-house/js
+        run: DEBUG=amman* yarn amman:stop 
+
+      # Run integration test - onchain program
+      - name: start-local-test-validator-onchain
+        working-directory: ./auction-house/js
+        run: DEBUG=amman* yarn amman:start onchain.ammanrc.js
+
+      - name: integration-test-auction-house-program
+        id: run_integration_test
+        working-directory: ./auction-house/js
+        run: DEBUG=mpl* yarn test 
+
+      - name: stop-local-test-validator
+        working-directory: ./auction-house/js
+        run: DEBUG=amman* yarn amman:stop 
