--- a/auction-house/js/package.json
+++ b/auction-house/js/package.json
@@ -13,9 +13,11 @@
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
     "build:watch": "rimraf dist && tsc -p tsconfig.json --watch",
-    "amman:start": "DEBUG=\"amman*\" amman validator ${0}",
+    "amman:start": "DEBUG=\"amman*\" amman validator",
+    "amman:start-custom-ammanrc": "DEBUG=\"amman*\" amman validator ${0}",
     "amman:stop": "pkill solana-test-validator",
-    "test:all": "yarn build && yarn amman:start ${0} && yarn test",
+    "test:all": "yarn build && yarn amman:start && yarn test",
+    "test:all-custom-ammanrc": "yarn build && yarn amman:start ${0} && yarn test",
     "test": "esr ./test/*.test.ts",
     "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
