--- a/auction-house/js/package.json
+++ b/auction-house/js/package.json
@@ -13,8 +13,8 @@
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
     "build:watch": "rimraf dist && tsc -p tsconfig.json --watch",
-    "amman:start": "DEBUG=\"amman*\" amman validator",
-    "amman:start-custom-ammanrc": "DEBUG=\"amman*\" amman validator ${0}",
+    "amman:start": "DEBUG=\"amman*\" amman start",
+    "amman:start-custom-ammanrc": "DEBUG=\"amman*\" amman start ${0}",
     "amman:stop": "pkill solana-test-validator",
     "test:all": "yarn build && yarn amman:start && yarn test",
     "test:all-custom-ammanrc": "yarn build && yarn amman:start ${0} && yarn test",
@@ -51,8 +51,10 @@
     "bn.js": "^5.2.0"
   },
   "devDependencies": {
+    "@metaplex-foundation/amman": "^0.10.0",
     "@metaplex-foundation/solita": "^0.5.0",
     "@types/tape": "^4.13.2",
+    "esbuild-runner": "^2.2.1",
     "eslint": "^8.3.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
