--- a/.github/workflows/integration-auction-house.yml
+++ b/.github/workflows/integration-auction-house.yml
@@ -77,6 +77,10 @@ jobs:
         working-directory: ./auction-house/js
         run: DEBUG=mpl* yarn test 
 
+      - name: stop-local-test-validator
+        working-directory: ./auction-house/js
+        run: DEBUG=amman* yarn amman:stop 
+
       # Run integration test - onchain program
       - name: start-local-test-validator-onchain
         working-directory: ./auction-house/js
@@ -86,3 +90,7 @@ jobs:
         id: run_integration_test_onchain
         working-directory: ./auction-house/js
         run: DEBUG=mpl* yarn test 
+
+      - name: stop-local-test-validator
+        working-directory: ./auction-house/js
+        run: DEBUG=amman* yarn amman:stop 
