--- a/auction-house/js/package.json
+++ b/auction-house/js/package.json
@@ -14,10 +14,10 @@
     "build": "rimraf dist && tsc -p tsconfig.json",
     "build:watch": "rimraf dist && tsc -p tsconfig.json --watch",
     "amman:start": "DEBUG=\"amman*\" amman start",
-    "amman:start-custom-ammanrc": "DEBUG=\"amman*\" amman start ${0}",
+    "amman:start-custom-ammanrc": "DEBUG=\"amman*\" amman start --config ${0}",
     "amman:stop": "DEBUG=\"amman*\" amman stop",
     "test:all": "yarn build && yarn amman:start && yarn test",
-    "test:all-custom-ammanrc": "yarn build && yarn amman:start ${0} && yarn test",
+    "test:all-custom-ammanrc": "yarn build && yarn amman:start-custom-ammanrc ${0} && yarn test",
     "test": "esr ./test/*.test.ts",
     "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
