--- a/metaplex/js/package.json
+++ b/metaplex/js/package.json
@@ -14,9 +14,9 @@
     "build": "rimraf dist && tsc -p tsconfig.json",
     "pretest": "yarn build",
     "test:build": "esr ./test/setup/build.ts",
-    "amman:start": "DEBUG=\"amman*\" amman validator ${0}",
+    "amman:start": "DEBUG=\"amman*\" amman validator",
     "amman:stop": "pkill solana-test-validator",
-    "test:all": "yarn test:build && yarn amman:start --config ${0} && yarn test",
+    "test:all": "yarn test:build && yarn amman:start && yarn test",
     "test": "tape ./dist/test/*.test.js",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
