--- a/.github/workflows/integration-token-vault.yml
+++ b/.github/workflows/integration-token-vault.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  SOLANA_VERSION: 1.10.0
   RUST_TOOLCHAIN: stable
 
 jobs:
@@ -32,29 +33,12 @@ jobs:
           workflow:
             - '.github/workflows/integration-token-vault.yml'
 
-  setup-versions:
-    needs: [changes]
-    if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true' || needs.changes.outputs.workflow == 'true' }}
-    runs-on: ubuntu-latest
-    outputs:
-      versions: ${{ steps.get-solana-versions.outputs.value }}
-    steps:
-      - uses: actions/checkout@v3
-      - id: get-solana-versions
-        uses: ./.github/actions/get-solana-versions
-
   build-and-integration-test-token-vault:
-    needs: [changes, setup-versions]
-    if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true' || needs.changes.outputs.workflow == 'true' }}
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        SOLANA_VERSION: ${{fromJson(needs.setup-versions.outputs.versions)}}
     env:
       cache_id: program-token-vault 
-      SOLANA_VERSION: ${{ matrix.SOLANA_VERSION }}
-
+    needs: changes
+    if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true' || needs.changes.outputs.workflow == 'true' }}
     steps:
       # Setup Deps
       - uses: actions/checkout@v2
