Adding api:gen script to bubblegum js directory
- Also cleaning up some package.json files.

Testing
- `anchor build --skip-lint` works and builds bubblegum.so.
- `yarn api:gen` works from `bubblegum/js` directory and builds
same as existing IDL (except adds a few metadata fields).

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -31,7 +31,7 @@ program = "target/deploy/mpl_gumdrop.so"
 
 [[test.genesis]]
 address = "WRAPYChf58WFCnyjXKJHtrPgzKXgHp6MD9aVDqJBbGh"
-program = "./target/deploy/candy_wrapper.so"
+program = "target/deploy/candy_wrapper.so"
 
 [workspace]
 members = [
