--- a/fixed-price-sale/cli/Cargo.toml
+++ b/fixed-price-sale/cli/Cargo.toml
@@ -14,7 +14,7 @@ mpl-fixed-price-sale = { path = "../program", features = [ "no-entrypoint" ] }
 mpl-token-metadata = {path = "../../token-metadata/program", features = ["no-entrypoint"]}
 borsh = "0.9.1"
 spl-token = { version = "3.3.0", features = [ "no-entrypoint" ] }
-anchor-lang = "0.25"
+anchor-lang = "~0.25"
 chrono = "0.4.19"
 spl-associated-token-account = "1.0.5"
 serde_json = "1.0.79"
