--- a/core/rust/testing-utils/Cargo.toml
+++ b/core/rust/testing-utils/Cargo.toml
@@ -23,6 +23,7 @@ solana-sdk = "~1.9.15"
 spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
 spl-associated-token-account = { version = "~1.0.3",  features = ["no-entrypoint"] }
 mpl-token-metadata = { version="~1.2.10", features = [ "no-entrypoint" ] }
+mpl-token-vault = { version = "0.1.0", features = [ "no-entrypoint" ] }
 rand = "~0.7.3"
 num = "~0.4"
 num-derive = "~0.3"
