Adding api:gen script to bubblegum js directory
- Adding couple misc files from original repo.
- Adding solita config.
- Cleaning up some yarn.lock and package.json files.
- Including Bubblegum in some top level config files.

Testing
- `anchor build --skip-lint` works and builds bubblegum.so.
- `yarn api:gen` works from `bubblegum/js` directory and builds
same as existing IDL (except adds a few metadata fields).

--- a/bubblegum/js/package.json
+++ b/bubblegum/js/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "SDK for MPL Bubblegum contract",
   "main": "index.ts",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
     "@metaplex-foundation/rustbin": "^0.3.1",
     "@metaplex-foundation/solita": "^0.12.2"
+  },
+  "scripts": {
+    "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita"
   }
 }
