--- a/nft-packs/program/Cargo.toml
+++ b/nft-packs/program/Cargo.toml
@@ -18,6 +18,8 @@ borsh = "~0.9.1"
 spl-math = { version = "~0.1", features = [ "no-entrypoint" ] }
 spl-token = { version="~3.2.0", features = [ "no-entrypoint" ] }
 mpl-token-metadata = { version="~1.2.10", features = [ "no-entrypoint" ] }
+mpl-metaplex = { version = "0.0.3", features = ["no-entrypoint"] }
+mpl-token-vault = { version = "0.1.0", features = [ "no-entrypoint" ] }
 arrayref = "0.3.6"
 
 [dev-dependencies]
