--- a/auction-house/cli/tsconfig.json
+++ b/auction-house/cli/tsconfig.json
@@ -10,7 +10,7 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "typeRoots": ["types", "node_modules/@types"]
   },
   "include": ["src/**/*"]
