--- a/bubblegum/js/package.json
+++ b/bubblegum/js/package.json
@@ -38,20 +38,31 @@
   "author": "Metaplex Maintainers <contact@metaplex.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@metaplex-foundation/amman": "0.10.0",
     "@metaplex-foundation/beet": "^0.1.0",
     "@metaplex-foundation/beet-solana": "^0.1.1",
-    "@solana/web3.js": "^1.35.1",
-    "@sorend-solana/gummyroll": "^0.0.6",
-    "@sorend-solana/utils": "^0.0.5"
-  },
-  "devDependencies": {
     "@metaplex-foundation/rustbin": "^0.3.1",
     "@metaplex-foundation/solita": "^0.12.2",
+    "@project-serum/anchor": "^0.24.2",
+    "@solana/spl-token": "^0.1.8",
+    "@solana/web3.js": "^1.50.1",
+    "@sorend-solana/gummyroll": "^0.0.6",
+    "@sorend-solana/utils": "^0.0.5",
+    "typescript-collections": "^1.3.3"
+  },
+  "devDependencies": {
+    "@solana/spl-token": "^0.1.8",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.0.0",
     "@types/tape": "^4.13.2",
+    "chai": "^4.3.4",
     "eslint": "^8.3.0",
+    "mocha": "^9.0.3",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "spok": "^1.4.3",
     "tape": "^5.5.2",
-    "typescript": "^4.6.2"
+    "ts-mocha": "^10.0.0",
+    "typescript": "^4.3.5"
   }
 }
