--- a/package.json
+++ b/package.json
@@ -33,18 +33,13 @@
   "private": true,
   "devDependencies": {
     "@project-serum/anchor": "^0.19.0",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "chai": "^4.3.4",
     "esbuild-runner": "^2.2.1",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "lerna": "^4.0.0",
-    "mocha": "^9.0.3",
-    "prettier": "^2.4.1",
-    "ts-mocha": "^10.0.0"
+    "prettier": "^2.4.1"
   }
 }
