--- a/bubblegum/js/package.json
+++ b/bubblegum/js/package.json
@@ -5,20 +5,7 @@
   "main": "dist/src/mpl-bubblegum.js",
   "types": "dist/src/mpl-bubblegum.d.ts",
   "scripts": {
-    "check:publish-ready": "yarn build && yarn test",
-    "preversion": "yarn check:publish-ready",
-    "postversion": "git add package.json && git commit -m \"chore: update $npm_package_name to v$npm_package_version\" && git tag $npm_package_name@$npm_package_version",
-    "prepublish": "yarn check:publish-ready",
-    "postpublish": "git push origin && git push origin --tags",
-    "build:docs": "typedoc",
-    "build": "rimraf dist && tsc -p tsconfig.json",
-    "test": "tape dist/test/*.js",
-    "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita",
-    "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
-    "fix:lint": "yarn lint --fix",
-    "prettier": "prettier \"{src,test}/**/*.ts\" --check",
-    "fix:prettier": "prettier --write src/",
-    "fix": "yarn fix:lint && yarn fix:prettier"
+    "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita"
   },
   "files": [
     "/dist"
