Adding empty api:gen script for candy-wrapper to support CI tests
- Also adding license files to js directories.
- Also cleaning up extra bubblegum types file.

--- a/lerna.json
+++ b/lerna.json
@@ -9,7 +9,8 @@
     "metaplex/js",
     "auction-house/js",
     "fixed-price-sale/js",
-    "bubblegum/js"
+    "bubblegum/js",
+    "candy-wrapper/js"
   ],
   "useWorkspaces": true,
   "version": "independent",
