--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "gumdrop/js",
     "candy-machine/js",
     "fixed-price-sale/js",
-    "bubblegum/js"
+    "bubblegum/js",
+    "candy-wrapper/js"
   ],
   "repository": "git@github.com:metaplex-foundation/metaplex-program-library.git",
   "author": "Metaplex Maintainers <contact@metaplex.com>",
