--- a/bubblegum/js/package.json
+++ b/bubblegum/js/package.json
@@ -5,7 +5,20 @@
   "main": "dist/src/mpl-bubblegum.js",
   "types": "dist/src/mpl-bubblegum.d.ts",
   "scripts": {
-    "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita"
+    "check:publish-ready": "yarn build && yarn test",
+    "preversion": "yarn check:publish-ready",
+    "postversion": "git add package.json && git commit -m \"chore: update $npm_package_name to v$npm_package_version\" && git tag $npm_package_name@$npm_package_version",
+    "prepublish": "yarn check:publish-ready",
+    "postpublish": "git push origin && git push origin --tags",
+    "build:docs": "typedoc",
+    "build": "rimraf dist && tsc -p tsconfig.json",
+    "test": "tape dist/test/*.js",
+    "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita",
+    "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
+    "fix:lint": "yarn lint --fix",
+    "prettier": "prettier \"{src,test}/**/*.ts\" --check",
+    "fix:prettier": "prettier --write src/",
+    "fix": "yarn fix:lint && yarn fix:prettier"
   },
   "files": [
     "/dist"
@@ -39,12 +52,16 @@
   "devDependencies": {
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
+    "@types/tape": "^4.13.2",
     "chai": "^4.3.4",
     "eslint": "^8.3.0",
     "mocha": "^9.0.3",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
+    "spok": "^1.4.3",
+    "tape": "^5.5.2",
     "ts-mocha": "^10.0.0",
+    "typedoc": "^0.23.10",
     "typescript": "^4.3.5"
   }
 }
