--- a/candy-machine/program/Cargo.toml
+++ b/candy-machine/program/Cargo.toml
@@ -36,3 +36,4 @@ solana-program-test = "1.9.18"
 solana-sdk = "~1.9.18"
 anchor-client = "0.24.2"
 borsh = "~0.9.2"
+getrandom = { version = "0.2", features = ["js"] }
