--- a/fixed-price-sale/program/Cargo.toml
+++ b/fixed-price-sale/program/Cargo.toml
@@ -28,3 +28,4 @@ solana-program-test = "~1.9.28"
 solana-program = "~1.9.28"
 solana-sdk = "~1.9.28"
 spl-associated-token-account = "~1.0.3"
+getrandom = { version = "0.2", features = ["js"] }
