--- a/nft-packs/program/Cargo.toml
+++ b/nft-packs/program/Cargo.toml
@@ -26,6 +26,7 @@ arrayref = "0.3.6"
 solana-program-test = "~1.9.28"
 solana-sdk = "~1.9.28"
 rand = { version="~0.8.4" }
+getrandom = { version = "0.2", features = ["js"] }
 
 [lib]
 crate-type = ["cdylib", "lib"]
