--- a/token-entangler/program/Cargo.toml
+++ b/token-entangler/program/Cargo.toml
@@ -28,3 +28,4 @@ arrayref = "~0.3.6"
 [dev-dependencies]
 solana-program-test = "~1.9.28"
 solana-sdk = "~1.9.28"
+getrandom = { version = "0.2", features = ["js"] }
