--- a/token-metadata/program/Cargo.toml
+++ b/token-metadata/program/Cargo.toml
@@ -30,6 +30,7 @@ serde_with = { version = "1.12.0", optional = true }
 [dev-dependencies]
 solana-sdk = "1.9.13"
 solana-program-test = "1.11.5"
+getrandom = { version = "0.2", features = ["js"] }
 
 [lib]
 crate-type = ["cdylib", "lib"]
