--- a/core/rust/testing-utils/Cargo.toml
+++ b/core/rust/testing-utils/Cargo.toml
@@ -29,3 +29,6 @@ num = "~0.4"
 num-derive = "~0.3"
 num-traits = "~0.2"
 borsh = "~0.9.1"
+
+[dev-dependencies]
+getrandom = { version = "0.2", features = ["js"] }
