--- a/candy-machine/js/package.json
+++ b/candy-machine/js/package.json
@@ -11,7 +11,7 @@
     "postversion": "git add package.json && git commit -m \"chore: update $npm_package_name to v$npm_package_version\" && git tag $npm_package_name@$npm_package_version",
     "prepublishOnly": "yarn check:publish-ready",
     "postpublish": "git push origin && git push origin --tags",
-    "build:docs": "typedoc",
+    "build:docs": "docsdir=../../docs/candy-machine; rimraf $docsdir && typedoc --out $docsdir",
     "build": "rimraf dist && tsc -p tsconfig.json",
     "test": "echo mpl-candy-machine tests coming up ...",
     "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita",
@@ -50,6 +50,7 @@
     "eslint": "^8.3.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
+    "typedoc": "^0.22.11",
     "typescript": "^4.6.2"
   }
 }
