--- a/fixed-price-sale/js/package.json
+++ b/fixed-price-sale/js/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "postversion": "git add package.json && git commit -m \"chore: update $npm_package_name to v$npm_package_version\" && git tag $npm_package_name@$npm_package_version",
     "postpublish": "git push origin && git push origin --tags",
-    "build:docs": "typedoc",
+    "build:docs": "docsdir=../../docs/fixed-price-sale; rimraf $docsdir && typedoc --out $docsdir",
     "build": "rimraf dist && tsc -p tsconfig.json",
     "amman:start": "DEBUG=\"amman*\" amman validator",
     "amman:stop": "pkill -f solana-test-validator",
@@ -58,6 +58,7 @@
     "rimraf": "^3.0.2",
     "supports-color": "^9.2.1",
     "tape": "^5.5.2",
+    "typedoc": "^0.22.11",
     "typescript": "^4.6.2"
   }
 }
