--- a/gumdrop/js/package.json
+++ b/gumdrop/js/package.json
@@ -10,7 +10,7 @@
     "postversion": "git add package.json && git commit -m \"chore: update $npm_package_name to v$npm_package_version\" && git tag $npm_package_name@$npm_package_version",
     "prepublishOnly": "yarn check:publish-ready",
     "postpublish": "git push origin && git push origin --tags",
-    "build:docs": "typedoc",
+    "build:docs": "docsdir=../../docs/gumdrop; rimraf $docsdir && typedoc --out $docsdir",
     "build": "rimraf dist && tsc -p tsconfig.json",
     "test": "tape dist/test/*.js",
     "api:gen": "node scripts/api-gen-ts.js && prettier --write ./src/**/*.ts",
@@ -49,6 +49,7 @@
     "rimraf": "^3.0.2",
     "spok": "^1.4.3",
     "tape": "^5.5.2",
+    "typedoc": "^0.22.11",
     "typescript": "^4.6.2"
   }
 }
