--- a/metaplex/js/package.json
+++ b/metaplex/js/package.json
@@ -10,7 +10,7 @@
     "postversion": "git add package.json && git commit -m \"chore: update $npm_package_name to v$npm_package_version\" && git tag $npm_package_name@$npm_package_version",
     "prepublishOnly": "yarn check:publish-ready",
     "postpublish": "git push origin && git push origin --tags",
-    "build:docs": "typedoc",
+    "build:docs": "docsdir=../../docs/metaplex; rimraf $docsdir && typedoc --out $docsdir",
     "build": "rimraf dist && tsc -p tsconfig.json",
     "pretest": "yarn build",
     "test:build": "esr ./test/setup/build.ts",
@@ -56,6 +56,7 @@
     "eslint": "^8.3.0",
     "rimraf": "^3.0.2",
     "tape": "^5.5.2",
+    "typedoc": "^0.22.11",
     "typescript": "^4.6.2"
   }
 }
