--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -11,7 +11,7 @@
     "postversion": "git add package.json && git commit -m \"chore: update $npm_package_name to v$npm_package_version\" && git tag $npm_package_name@$npm_package_version",
     "prepublishOnly": "yarn check:publish-ready",
     "postpublish": "git push origin && git push origin --tags",
-    "build:docs": "typedoc",
+    "build:docs": "docsdir=../../docs/token-metadata; rimraf $docsdir && typedoc --out $docsdir",
     "build": "rimraf dist && tsc -p tsconfig.json",
     "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita",
     "test": "cpr test/fixtures dist/test/fixtures && tape dist/test/*.js",
@@ -58,6 +58,7 @@
     "spok": "^1.4.3",
     "supports-color": "^9.2.1",
     "tape": "^5.5.3",
+    "typedoc": "^0.22.11",
     "typescript": "^4.6.2"
   }
 }
