--- a/token-vault/js/package.json
+++ b/token-vault/js/package.json
@@ -10,7 +10,7 @@
     "postversion": "git add package.json && git commit -m \"chore: update $npm_package_name to v$npm_package_version\" && git tag $npm_package_name@$npm_package_version",
     "prepublishOnly": "yarn check:publish-ready",
     "postpublish": "git push origin && git push origin --tags",
-    "build:docs": "typedoc",
+    "build:docs": "docsdir=../../docs/token-vault; rimraf $docsdir && typedoc --out $docsdir",
     "build": "rimraf dist && tsc -p tsconfig.json",
     "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita",
     "amman:start": "DEBUG='amman*' amman validator",
