--- a/.github/workflows/sdk-nft-packs.yml
+++ b/.github/workflows/sdk-nft-packs.yml
@@ -11,7 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     # Set job outputs to values from filter step
     outputs:
-      core: ${{ steps.filter.outputs.core }}
       package: ${{ steps.filter.outputs.package }}
     steps:
     - uses: actions/checkout@v2
@@ -25,7 +24,7 @@ jobs:
 
   build-lint-and-test-token-metadata:
     needs: changes
-    if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true' }}
+    if: ${{ needs.changes.outputs.package == 'true' }}
     runs-on: ubuntu-latest
 
     steps:
