--- a/.github/workflows/integration-token-vault.yml
+++ b/.github/workflows/integration-token-vault.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   changes:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     # Set job outputs to values from filter step
     outputs:
       core: ${{ steps.filter.outputs.core }}
@@ -33,7 +33,7 @@ jobs:
           workflow:
             - '.github/workflows/integration-token-vault.yml'
   build-and-integration-test-token-vault:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     env:
       cache_id: program-token-vault 
     needs: changes
