--- a/candy-core/js/package.json
+++ b/candy-core/js/package.json
@@ -13,8 +13,12 @@
     "postpublish": "git push origin && git push origin --tags",
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
-    "test": "echo mpl-candy-core tests coming up ...",
+    "pretest": "yarn build && yarn amman:start",
+    "test": "tape dist/test/*.js",
+    "posttest": "yarn build && yarn amman:stop",
     "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita",
+    "amman:start": "DEBUG='amman:(info|error)' amman start",
+    "amman:stop": "amman stop",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
     "prettier": "prettier \"{src,test}/**/*.ts\" --check",
@@ -43,13 +47,20 @@
     "@metaplex-foundation/beet-solana": "^0.3.0",
     "@metaplex-foundation/cusper": "^0.0.2",
     "@metaplex-foundation/mpl-core": "^0.6.1",
-    "@solana/web3.js": "^1.35.1"
+    "@metaplex-foundation/mpl-token-metadata": "^2.2.3",
+    "@solana/spl-token": "^0.2.0"
   },
   "devDependencies": {
+    "@metaplex-foundation/amman": "^0.10.0",
     "@metaplex-foundation/solita": "^0.12.0",
+    "@types/bn.js": "^5.1.0",
     "eslint": "^8.3.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
+    "spok": "^1.4.3",
+    "tap-spec": "^5.0.0",
+    "tape": "^5.5.0",
+    "typedoc": "^0.22.11",
     "typescript": "^4.6.2"
   }
 }
